Change stars to blue

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -854,7 +854,7 @@
        position: absolute;
        top: 0;
        z-index: 1;
-       color: $warning;
+       color: $base-color;
        opacity: 0;
        transition: .5s;
        text-shadow: 0 2px 5px rgba(0,0,0,0.5) ;
