--- a/app/views/application/_side_bar.html.erb
+++ b/app/views/application/_side_bar.html.erb
@@ -28,6 +28,6 @@
 <div class="box">
   <h2 class="title is-4 has-text-base"> About bookclone </h2>
   <span>
-    This project was build by me <a href="https://www.linkedin.com/in/zakariaeelmejdki/" target='_blank'>Zakariae El Mejdki</a> and My partner <a href="https://www.linkedin.com/in/franco-rosa-79972119b/" target='_blank'>Franco Rosa</a> in order to improve our skills on web devekopement, so we did clone facebook features in this project, if you have any new features that you want to suggest or have encounter some errors while using the app, please open an issue in <a href="https://github.com/elmejdki/bookclone/issues" target="_blank">this repository</a>
+    This project was build by me <a href="https://www.linkedin.com/in/zakariaeelmejdki/" target='_blank'>Zakariae El Mejdki</a> and My partner <a href="https://www.linkedin.com/in/franco-rosa-79972119b/" target='_blank'>Franco Rosa</a> in order to improve our skills on web development, so we did clone facebook features in this project, if you have any new features that you want to suggest or have encounter some errors while using the app, please open an issue in <a href="https://github.com/elmejdki/bookclone/issues" target="_blank">this repository</a>
   </span>
 </div>
