--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -432,7 +432,7 @@
          
          .poster-info {
            display: flex;
-           align-items: center;
+           align-items: flex-start;
            .image-wrapper {
              width: 50px;
              height: 50px;
@@ -461,6 +461,8 @@
          line-height: 1.8;
          padding: 10px 0;
          text-transform: capitalize;
+         
+         
        }
  
        .post-image {
@@ -881,6 +883,12 @@
    .post-text {
      width: 60%;
      padding: 5px 15px !important;
+   }
+
+   a {
+    display: block;
+    display: flex;
+    align-items: flex-end;
    }
  }
 
